# ai201-project3-takemeter

./: .gitignore  README.md  evaluation_results.json  planning.md  pyproject.toml  takemeter.ipynb
data/: valorant_takes.csv
scripts/: build_csv.py  classify.py  label_bootstrap.py  review_labels.py  run_local.py  scrape_arctic.py  scrape_reddit.py
